--- a/.github/workflows/spinnaker-release.yml
+++ b/.github/workflows/spinnaker-release.yml
@@ -31,13 +31,13 @@ jobs:
             exit 1
           fi
 
-      - name: Generate version to verify
+      - name: Generate next version to verify
         id: precondition-version
         uses: ./.github/actions/version
         with:
           namespace: spinnaker
           is-release: true
-          skip-increment: ${{ github.run_attempt != '1' }}
+          skip-increment: false
           skip-tag: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -167,3 +167,17 @@ jobs:
       add-to-versions-yml: ${{ inputs.add-to-versions-yml }}
       spinnaker-version: ${{ inputs.spinnaker-version }}
       spinnaker-previous-version: ${{ inputs.spinnaker-previous-version }}
+
+  # Only push the actual build tag once we've completed the release, to allow re-runs
+  write-build-tag:
+    runs-on: ubuntu-latest
+    needs: spinnaker-release-bom
+    steps:
+      - name: Write release build tag
+        uses: ./.github/actions/version
+        with:
+          namespace: spinnaker
+          is-release: true
+          skip-increment: false
+          skip-tag: false
+          github-token: ${{ secrets.GITHUB_TOKEN }}
