--- a/.github/workflows/spinnaker-gradle-project.yml
+++ b/.github/workflows/spinnaker-gradle-project.yml
@@ -38,7 +38,7 @@ jobs:
         uses: ./.github/actions/version
         with:
           namespace: 'spinnaker-gradle-project'
-          version-override: ${{ github.event_name == 'workflow_call' && inputs.version-override || '' }}
+          version-override: ${{ inputs.version-override }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release build (Gradle plugin portal)
