--- a/.github/workflows/deck-kayenta.yml
+++ b/.github/workflows/deck-kayenta.yml
@@ -47,7 +47,7 @@ jobs:
           publish-debs: false
           publish-halconfig: false
           publish-npm: ${{ inputs.publish-npm != false }}
-          version-override: ${{ inputs.version-override || '' }}
+          version-override: ${{ inputs.version-override }}
           integration-test: false
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
