--- a/.github/workflows/deck.yml
+++ b/.github/workflows/deck.yml
@@ -64,7 +64,7 @@ jobs:
           publish-containers: ${{ inputs.publish-containers != false }}
           publish-debs: ${{ inputs.publish-debs != false }}
           publish-npm: ${{ inputs.publish-npm != false }}
-          version-override: ${{ inputs.version-override || '' }}
+          version-override: ${{ inputs.version-override }}
           integration-test: false
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
