--- a/.github/workflows/halyard.yml
+++ b/.github/workflows/halyard.yml
@@ -63,7 +63,7 @@ jobs:
           publish: ${{ github.event_name != 'pull_request' }}
           publish-containers: ${{ inputs.publish-containers != false }}
           publish-debs: ${{ inputs.publish-debs != false }}
-          version-override: ${{ inputs.version-override || '' }}
+          version-override: ${{ inputs.version-override }}
           publish-halconfig: false
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
