--- a/.github/workflows/igor.yml
+++ b/.github/workflows/igor.yml
@@ -60,6 +60,6 @@ jobs:
           publish: ${{ github.event_name != 'pull_request' }}
           publish-containers: ${{ inputs.publish-containers != false }}
           publish-debs: ${{ inputs.publish-debs != false }}
-          version-override: ${{ inputs.version-override || '' }}
+          version-override: ${{ inputs.version-override }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
