--- a/.github/workflows/spin.yml
+++ b/.github/workflows/spin.yml
@@ -42,7 +42,7 @@ jobs:
         id: version
         with:
           namespace: spin
-          version-override: ${{ github.event_name == 'workflow_call' && inputs.version-override || '' }}
+          version-override: ${{ inputs.version-override }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-go@v5
