--- a/.github/workflows/spinnaker-release.yml
+++ b/.github/workflows/spinnaker-release.yml
@@ -54,6 +54,8 @@ jobs:
   version:
     runs-on: ubuntu-latest
     needs: check-preconditions
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
         with:
