--- a/.github/actions/generic-build-publish/action.yml
+++ b/.github/actions/generic-build-publish/action.yml
@@ -163,6 +163,7 @@ runs:
 
     - name: Create Tag
       uses: actions/github-script@v7
+      continue-on-error: true
       if: github.event_name != 'pull_request' && inputs.publish == 'true'
       env:
         TAG: ${{ steps.version.outputs.tag }}
