--- a/.github/workflows/spinnaker-release-halconfig.yml
+++ b/.github/workflows/spinnaker-release-halconfig.yml
@@ -9,7 +9,7 @@ on:
         required: true
         type: string
       version:
-        description: The version to publish
+        description: The version to publish.  Must correspond to a tag `spinnaker-release-<version>`.
         required: true
         type: string
 
@@ -20,7 +20,7 @@ on:
         required: true
         type: string
       version:
-        description: The version to publish
+        description: The version to publish. Must correspond to a tag `spinnaker-release-<version>`.
         required: true
         type: string
 
@@ -30,7 +30,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          ref: spinnaker-release-${{ inputs.version }}
 
       - name: Exit if not on a release branch
         run: |
@@ -66,6 +66,8 @@ jobs:
     needs: check-preconditions
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: spinnaker-release-${{ inputs.version }}
 
       - name: Create Halconfig
         uses: ./.github/actions/publish-halconfig
