--- a/.github/workflows/spinnaker-release-bom.yml
+++ b/.github/workflows/spinnaker-release-bom.yml
@@ -27,6 +27,10 @@ on:
         description: Publish Github release?
         type: boolean
         default: true
+      allow-bom-overwrite:
+        description: Allow BoM overwrite if it already exists?
+        type: boolean
+        default: false
 
   workflow_dispatch:
     inputs:
@@ -53,6 +57,10 @@ on:
         description: Publish Github release?
         type: boolean
         default: true
+      allow-bom-overwrite:
+        description: Allow BoM overwrite if it already exists?
+        type: boolean
+        default: false
 
 jobs:
   check-preconditions:
@@ -110,6 +118,7 @@ jobs:
           add-to-versions-yml: ${{ inputs.add-to-versions-yml }}
           publish-bom: ${{ inputs.publish-bom }}
           publish-changelog: ${{ inputs.publish-changelog }}
+          allow-bom-overwrite: ${{ inputs.allow-bom-overwrite }}
 
       - name: Create Github release
         if: inputs.publish-github-release == true
